--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraintlayout_version"
 
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -42,6 +44,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava_android_version"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.markomilos:paginate:$paginate_version"
 
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
