--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.constraintlayout_version = '1.1.0-beta6'
     ext.lifecycle_version = "1.1.1"
     ext.glide_version = '4.6.1'
+    ext.paginate_version = '0.5.1'
 
     repositories {
         google()
